--- a/style/catalog.css
+++ b/style/catalog.css
@@ -62,20 +62,58 @@
   margin-bottom: -5px;
 }
 
-.header__search {
+.header__search-wrapper {
   flex-grow: 1;
+  position: relative;
+}
+
+.header__search-icon {
+  position: absolute;
+  top: 12px;
+  left: 17px;
+  fill-opacity: 0.3;
+}
+
+.header__search {
+  width: 100%;
+  height: 100%;
   border: none;
   background-color: transparent;
-  padding-left: 17px;
+  padding-left: 42px;
+  color: var(--basic-white);
+}
+
+.header__search:hover {
+  background-color: #212a3a;
+}
+
+.header__search:hover + .header__search-icon {
+  fill-opacity: 1;
 }
 
 .header__search:focus {
-  background-color: #fff;
+  color: var(--basic-black);
+  background-color: var(--basic-white);;
+  outline: none;
+}
+
+.header__search:focus + .header__search-icon {
+  fill-opacity: 1;
+}
+
+.header__search:focus + .header__search-icon path {
+  fill: #EE3643;
 }
 
 .header__search::placeholder {
   color: #FFFFFF;
 }
+
+/*отключение крестика у input*/
+input::-webkit-search-decoration,
+input::-webkit-search-cancel-button,
+input::-webkit-search-results-button,
+input::-webkit-search-results-decoration { display: none; }
 
 .header__button-list {
   list-style: none;
@@ -230,10 +268,22 @@
   margin-left: 15px;
 }
 
+.header__username-btn:hover {
+  color: var(--basic-red);
+}
+
+.header__username-btn:hover::before {
+  background: url("../img/icons/icon-user-blue.svg");
+}
+
 .svg-wrapper {
   width: 20px;
   height: 17px;
   margin: 14px 17px;
+}
+
+.header__logout-btn:hover path {
+  fill: #32425C;
 }
 
 .header__user-nav {
