--- a/style/catalog.css
+++ b/style/catalog.css
@@ -346,9 +346,6 @@ input::-webkit-search-results-decoration { display: none; }
   margin-bottom: -5px;
 }
 
-.header__nav-item {
-}
-
 .header__nav-link {
   color: var(--basic-white);
   display: inline-block;
@@ -369,4 +366,151 @@ input::-webkit-search-results-decoration { display: none; }
 
 .main {
   flex: 1 0 auto;
+}
+
+/*Footer*/
+
+.footer {
+  background-color: var(--basic-blue);
+}
+
+.footer-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-bottom: 21px;
+}
+
+.footer__logo {
+  padding: 20px 41px;
+  background: var(--basic-red);
+  border-bottom: 5px solid #ad1313;
+  margin-bottom: -5px;
+}
+
+.footer__nav-list {
+  display: flex;
+  list-style: none;
+  justify-content: flex-end;
+  margin-bottom: 8px;
+}
+
+.footer__nav-link {
+  color: var(--basic-white);
+  line-height: 24px;
+  text-decoration: none;
+}
+
+.footer__nav-item {
+  margin-right: 58px;
+}
+
+.footer__nav-item:last-child {
+  margin-right: 0;
+}
+
+.footer__nav-link:hover {
+  text-decoration: underline;
+}
+
+.footer__nav-link:active {
+  color: rgba(255, 255, 255, 0.5);
+  text-decoration: none;
+}
+
+.footer-middle {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 54px;
+}
+
+.footer__address {
+  color: var(--basic-white);
+}
+
+.footer__nav-list_middle {
+  display: flex;
+  list-style: none;
+  justify-content: flex-end;
+}
+
+.footer__nav-item_middle {
+  margin-right: 58px;
+  margin-top: 5px;
+}
+
+.footer__nav-item_middle:last-child {
+  margin-right: 0;
+}
+
+.footer__nav-link_middle {
+  color: #FFD180;
+  text-decoration: none;
+}
+
+.footer__nav-link_middle:hover {
+  text-decoration: underline;
+}
+
+.footer__nav-link_middle:active {
+  opacity: 0.5;
+  text-decoration: none;
+}
+
+.footer-bottom {
+  background-color: var(--basik-dark-blue);
+}
+
+.footer-container {
+  display: flex;
+  padding: 36px 0 34px;
+  justify-content: space-between;
+}
+
+.footer__copyright {
+  color: var(--basic-white);
+  font-size: 16px;
+  line-height: 18px;
+}
+
+.footer__social {
+  display: flex;
+  list-style: none;
+}
+
+.social__link:hover path:first-child {
+  fill: var(--basic-red);
+}
+
+.social__link:active path:first-child {
+  fill: var(--basic-red);
+  opacity: 0.85;
+}
+
+.footer__authors {
+  display: flex;
+}
+
+.footer__feedback {
+  margin-right: 51px;
+}
+
+.authors__description {
+  color: var(--basic-white);
+  font-size: 16px;
+  line-height: 18px;
+}
+
+.authors__link {
+  color: #FFD180;
+  text-decoration: none;
+}
+
+.authors__link:hover {
+  text-decoration: underline;
+}
+
+.authors__link:active {
+  text-decoration: none;
+  color: var(--basic-red);
 }
