--- a/style/catalog.css
+++ b/style/catalog.css
@@ -366,6 +366,249 @@ input::-webkit-search-results-decoration { display: none; }
 
 .main {
   flex: 1 0 auto;
+  padding-top: 21px;
+}
+
+.main__breadcrumbs {
+  display: flex;
+  list-style: none;
+  margin-bottom: 20px;
+}
+
+.breadcrumbs__item {
+  display: flex;
+  align-items: center;
+  margin-right: 17px;
+}
+
+.breadcrumbs__item:last-child {
+  margin-right: 0;
+}
+
+.breadcrumbs__item::after {
+  content: '';
+  width: 8px;
+  height: 12px;
+  background: url("../img/icons/arrow-breadcrumbs.svg");
+  margin-left: 17px;
+}
+
+.breadcrumbs__item:last-child::after {
+  display: none;
+}
+
+.breadcrumbs__link {
+  font-family: 'PT Sans', sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: var(--basic-black);
+}
+
+.main__title {
+  text-transform: uppercase;
+  font-size: 30px;
+  line-height: 30px;
+  color: #32425C;
+  padding: 30px 0 30px 30px;
+  background-color: var(--special-light-gray);
+
+}
+
+.main__catalog {
+  display: flex;
+}
+
+.column-left {
+  width: 220px;
+  flex-shrink: 0;
+  margin-right: 20px;
+  display: flex;
+  flex-direction: column;
+  /*outline: 3px solid rgba(233, 233, 233, 0.7);*/
+  /*outline-offset: -3px;*/
+}
+
+.form-description{
+  font-family: 'PT Sans', sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+  text-transform: uppercase;
+  padding: 10px 18px;
+  background-color: var(--special-sand);
+  border-radius: 2px;
+  display: flex;
+}
+
+.form-description.left {
+  margin-bottom: 15px;
+}
+
+fieldset {
+  padding: 0;
+  border: none;
+  margin-bottom: 20px;
+}
+
+.plug {
+  height:100px;
+  background-color: #f1a5a5;
+  text-align: center;
+  line-height: 100px;
+}
+
+.manufacturer,
+.price-filter {
+  padding-bottom: 26px;
+  /*outline: 3px solid rgba(0, 255, 0, 0.7);*/
+  /*outline-offset: -3px;*/
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.form-description.right {
+  margin-bottom: 28px;
+}
+
+.filter {
+  display: flex;
+  flex-direction: column;
+}
+
+.power {
+  margin-bottom: 35px;
+}
+
+.filter__manufacturer-list,
+.power__list {
+  list-style: none;
+  text-transform: uppercase;
+  font-family: 'PT Sans', sans-serif;
+  font-size: 15px;
+  line-height: 19px;
+  display: flex;
+  flex-direction: column;
+}
+
+.filter__manufacturer-item,
+.power__item {
+  margin-bottom: 20px;
+}
+
+.filter__manufacturer-item:last-child,
+.power__item:last-child {
+  margin-bottom: 0;
+}
+
+legend {
+  font-family: 'PT Sans', sans-serif;
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 30px;
+  text-transform: uppercase;
+  margin-bottom: 15px;
+}
+
+.filter__button {
+  font-family: 'PT Sans', sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+  background-color: transparent;
+  text-transform: uppercase;
+  padding: 10px 0;
+  border: 1px solid rgba(234, 234, 234, 1);
+  cursor: pointer;
+}
+
+.filter__button:hover {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.filter__button:active {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  background-color: var(--basic-red);
+  color: var(--basic-white);
+}
+
+.catalog__list {
+  flex-grow: 1;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.catalog__card {
+  width: 220px;
+  margin-right: 20px;
+  margin-bottom: 18px;
+  display: flex;
+  flex-direction: column;
+  background-color: var(--basic-white);
+  text-align: center;
+  border: 1px solid rgba(234, 234, 234, 1);
+}
+
+.catalog__card:hover {
+  filter: drop-shadow(0px 4px 20px rgba(0, 0, 0, 0.15));
+}
+
+.catalog__card:nth-child(3n) {
+  margin-right: 0;
+}
+
+.card__preview {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 178px;
+}
+
+.card__title {
+  font-family: 'PT Sans', sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 20px;
+  margin-bottom: 7px;
+  flex-grow: 1;
+}
+
+.price {
+  font-family: 'PT Sans', sans-serif;
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 18px;
+  text-transform: uppercase;
+}
+
+.card__old-price {
+  text-decoration-line: line-through;
+  color: #A9A9A9;
+  margin-bottom: 13px;
+}
+
+.card__current-price {
+  color: var(--basic-white);
+  /*padding: 10px 32px;*/
+  background-color: var(--basic-red);
+  margin: 0 45px 21px;
+  padding: 10px 0;
+}
+
+.main__description {
+  background-color: var(--special-light-gray);
+  padding: 64px 0 68px;
+}
+
+.description-title {
+  font-size: 30px;
+  line-height: 30px;
+  text-transform: uppercase;
+  margin-bottom: 25px;
+}
+
+.description-text {
+  font-family: 'PT Sans', sans-serif;
+  font-size: 13px;
+  line-height: 24px;
 }
 
 /*Footer*/
