--- a/style/catalog.css
+++ b/style/catalog.css
@@ -453,7 +453,7 @@ fieldset {
 
 .plug {
   height:100px;
-  background-color: #f1a5a5;
+  background-color: var(--special-sand);
   text-align: center;
   line-height: 100px;
 }
@@ -468,6 +468,46 @@ fieldset {
 
 .form-description.right {
   margin-bottom: 28px;
+}
+
+.right__title {
+  flex-grow: 1;
+}
+
+.right__list {
+  list-style: none;
+  display: flex;
+  margin-right: 45px;
+}
+
+.right__item {
+  margin-right: 60px;
+  border-bottom: 1px dashed var(--basic-red);
+  cursor: pointer;
+}
+
+.right__item:first-child {
+  color: var(--basic-red);
+  border-bottom: none;
+}
+
+.right__item:last-child {
+  margin-right: 0;
+}
+
+.arrow-list{
+  display: flex;
+  list-style: none;
+  align-items: center;
+}
+
+.arrow-item {
+  margin-right: 21px;
+  cursor: pointer;
+}
+
+.arrow-item:last-child {
+  margin-right: 0;
 }
 
 .filter {
@@ -513,6 +553,92 @@ label,
 .checkbox__input,
 .checkbox__radio {
   cursor: pointer;
+}
+
+
+/*Универсальное скрытие чекбоксов*/
+.checkbox__input,
+.checkbox__radio {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+}
+
+.radio__box,
+.check__box {
+  display: flex;
+  align-items: center;
+}
+
+.check__box::before {
+  content: '';
+  width: 27px;
+  height: 23px;
+  margin-right: 11px;
+  background: url('../img/icons/checkbox-off.svg') no-repeat;
+}
+
+.checkbox__input:hover + .check__box::before {
+  background: url('../img/icons/checkbox-off-hover.svg') no-repeat;
+}
+
+.checkbox__input:checked + .check__box::before {
+  background: url('../img/icons/checkbox-on.svg') no-repeat;
+}
+
+.checkbox__input:checked:hover + .check__box::before {
+  background: url('../img/icons/checkbox-on-hover.svg') no-repeat;
+}
+
+.checkbox__input:disabled + .check__box::before,
+.checkbox__input:disabled + .check__box {
+  opacity: 0.4;
+  background: url('../img/icons/checkbox-off.svg') no-repeat;
+}
+
+.checkbox__input:disabled:checked + .check__box::before,
+.checkbox__input:disabled:checked + .check__box {
+  opacity: 0.4;
+  background: url('../img/icons/checkbox-on.svg') no-repeat;
+}
+
+.radio__box {
+  display: flex;
+  align-items: center;
+}
+
+.radio__box::before {
+  content: '';
+  width: 25px;
+  height: 25px;
+  margin-right: 11px;
+  background: url('../img/icons/radio-off.svg') no-repeat;
+}
+
+.checkbox__radio:hover + .radio__box::before {
+  background: url('../img/icons/radio-off-hover.svg') no-repeat;
+}
+
+.checkbox__radio:checked + .radio__box::before {
+  background: url('../img/icons/radio-on.svg') no-repeat;
+}
+
+.checkbox__radio:checked:hover + .radio__box::before {
+  background: url('../img/icons/radio-on-hover.svg') no-repeat;
+}
+
+.checkbox__radio:disabled + .radio__box::before,
+.checkbox__radio:disabled + .radio__box {
+  opacity: 0.4;
+  background: url('../img/icons/radio-off.svg') no-repeat;
+}
+
+.checkbox__radio:disabled:checked + .radio__box::before,
+.checkbox__radio:disabled:checked + .radio__box {
+  opacity: 0.4;
+  background: url('../img/icons/radio-on.svg') no-repeat;
 }
 
 .filter__button {
@@ -568,6 +694,79 @@ label,
   height: 178px;
 }
 
+.buttons {
+  display: none;
+  flex-direction: column;
+  flex-basis: 178px;
+  padding-top: 38px;
+  width: 135px;
+  margin: 0 auto;
+}
+
+.catalog__card:hover .buttons {
+  display: flex;
+}
+
+.catalog__card:hover .card__preview {
+  display: none;
+}
+
+.buttons__hidden {
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 18px;
+  padding: 10px;
+  background-color: transparent;
+  border: none;
+  border-radius: 2px;
+}
+
+.buttons__buy {
+  margin-bottom: 10px;
+  background: #63A63E;
+  box-shadow: inset 0 -3px 0 #367315;
+  color: var(--basic-white);
+}
+
+.buttons__buy:hover {
+  background: #5FBB2D;
+}
+
+.buttons__buy:active {
+  background: #518534;
+}
+
+.buttons__buy_text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.buttons__buy_text::before {
+  content: '';
+  width: 15px;
+  height: 15px;
+  background: url('../img/icons/icon-cart.svg');
+  margin-right: 10px;
+}
+
+.buttons__bookmarks {
+  box-sizing: border-box;
+  outline: 3px solid #63A63E;
+  outline-offset: -3px;
+  color: var(--basic-blue);
+}
+
+.buttons__bookmarks:hover {
+  outline-color: var(--basic-blue);
+}
+
+.buttons__bookmarks:active {
+  color: var(--basic-blue);
+  outline-color: var(--basic-blue);
+  opacity: 0.5;
+}
+
 .card__title {
   font-family: 'PT Sans', sans-serif;
   font-weight: 700;
@@ -593,7 +792,7 @@ label,
 
 .card__current-price {
   color: var(--basic-white);
-  /*padding: 10px 32px;*/
+  cursor: pointer;
   background-color: var(--basic-red);
   margin: 0 45px 21px;
   padding: 10px 0;
