--- a/style/style.css
+++ b/style/style.css
@@ -194,15 +194,32 @@ img {
 }
 
 .user-button {
+  display: grid;
   padding: 12px 24px;
-  display: inline-block;
   color: var(--basic-black);
   text-decoration: none;
 }
 
+.user-button:hover {
+  color: var(--basic-red)
+}
+
 .login {
-  grid-area: 1 / 1 / 2 / 2;
-  padding: 12px 24px 12px 50px;
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  gap: 5px;
+}
+
+.login::before {
+  content: '';
+  width: 20px;
+  height: 18px;
+  background-image: url("data:image/svg+xml,%3Csvg width='20' height='17' viewBox='0 0 20 17' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14.1667 9L5.71429 0.5V6.5H0V11.5H5.71429V17.5L14.1667 9Z' fill='%23C5C5C5'/%3E%3Cpath d='M16.1771 15.51H11.3895V17.5H16.1771C18.2514 17.5 19.0381 15.69 19.0619 14.474V3.528C19.0381 2.311 18.2514 0.5 16.1771 0.5H11.3895V2.49H16.1771C16.9762 2.49 17.1219 3.171 17.1391 3.547V14.451C17.1229 14.827 16.9762 15.51 16.1771 15.51Z' fill='%23C5C5C5'/%3E%3C/svg%3E%0A");
+  background-repeat: no-repeat;
+}
+
+.login:hover::before {
+  background-image: url("data:image/svg+xml,%3Csvg width='20' height='17' viewBox='0 0 20 17' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14.1667 8.5L5.71429 0V6H0V11H5.71429V17L14.1667 8.5Z' fill='%233D546F'/%3E%3Cpath d='M16.1771 15.01H11.3895V17H16.1771C18.2514 17 19.0381 15.19 19.0619 13.974V3.028C19.0381 1.811 18.2514 0 16.1771 0H11.3895V1.99H16.1771C16.9762 1.99 17.1219 2.671 17.1391 3.047V13.951C17.1229 14.327 16.9762 15.01 16.1771 15.01Z' fill='%233D546F'/%3E%3C/svg%3E%0A");
 }
 
 .nav__list {
@@ -230,6 +247,11 @@ img {
   background-color: #293449;
 }
 
+.nav__link:active {
+  background-color: #1D2739;
+  color: rgba(255, 255, 255, 0.5);
+}
+
 .hidden-title {
   display: none;
 }
@@ -255,6 +277,21 @@ img {
   grid-template-columns: auto 1fr;
   width: 300px;
   height: 123px;
+  overflow: hidden;
+}
+
+.features__new {
+  position: absolute;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  top: 7px;
+  right: -27px;
+  width: 100px;
+  height: 30px;
+  background-color: var(--basic-red);
+  color: #fff;
+  transform: rotate(45deg);
 }
 
 .features__title {
@@ -292,6 +329,7 @@ img {
 
 .features__material {
   background-color: var(--special-orange);
+  position: relative;
 }
 
 .features__instrument {
@@ -365,6 +403,14 @@ img {
   text-align: center;
   padding: 10px 0;
   box-sizing: border-box;
+}
+
+.opening-button:hover {
+  background-color: #CA2C37;
+}
+
+.opening-button:active {
+  background-color: #BA2732;
 }
 
 .section-start {
