--- a/style/style.css
+++ b/style/style.css
@@ -428,6 +428,7 @@ img {
   display: inline-block;
   margin: 0 0 0 30px;
   align-self: center;
+  font-weight: 400;
 }
 
 .section-button {
@@ -437,6 +438,7 @@ img {
 }
 
 .section-description {
+  font-family: 'PT Sans', sans-serif;
   font-size: 13px;
   line-height: 24px;
   margin: 25px 0 0 0;
@@ -596,6 +598,7 @@ img {
 }
 
 .service__description {
+  font-family: 'PT Sans', sans-serif;
   font-size: 13px;
   line-height: 24px;
   margin-top: 30px;
