Added overlay and modal windows for map and form "write to us"

--- a/style/catalog.css
+++ b/style/catalog.css
@@ -3,7 +3,7 @@
   --basic-white: #FFFFFF;
   --basic-blue: #32425C;
   --basik-dark-blue: #293449;
-  --basic-red: #EE3643;
+  --basic-red: #ee3643;
   --basic-gray: #A9A9A9;
   --basic-yellow: #FFD180;
   --basick-green: #63A63E;
